--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
     <div class="Container" id="Welcome">
 
-        <div class="Navbar">
+        <div class="Navbar" style="padding:0 10px; margin: 0 10px">
 
-            <div class="Logo">
+            <div class="Logo" style="padding:0 10px; margin: 0 10px">
 
-                <h2>Siphiwe.dev</h2>
+                <h2 style="padding:0 10px; margin: 0 10px">Siphiwe.dev</h2>
 
             </div>
 
