--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
         <div class="Navbar" style="padding:0 10px; margin: 0 10px">
 
-            <div class="Logo" style="padding:0 10px; margin: 0 10px">
+            <div class="Logo" style="padding:0; margin: 0 ">
 
-                <h2 style="padding:0 10px; margin: 0 10px">Siphiwe.dev</h2>
+                <h2 style="padding:0; margin: 0">Siphiwe.dev</h2>
 
             </div>
 
