--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="Container" id="Welcome">
 
-        <div class="Navbar" style="padding:0 10px; margin: 0 10px">
+        <div class="Navbar" style="padding:0 10px; margin: 0">
 
             <div class="Logo" style="padding:0; margin: 0 ">
 
