--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 
                 </div>
 
-                <div class="Project">
+                <!--<div class="Project">
 
                     <div class="Project_image">
 
@@ -339,7 +339,7 @@
 
                     </div>
 
-                </div>
+                </div>-->
 
                 <div class="Project">
 
